# datafusion

./: .env.ci  .gitignore  .pre-commit-config.yaml  .rat-apache  .rat-excludes  CONTRIBUTING.md  Cargo.toml  README.md  about.toml  pixi.toml
.github/: dependabot.yaml
.github/workflows/: dev.yaml  generate.toml  rust_release.yaml  rust_test.yaml  rust_test_pr.yaml
ci/: test_package.py
docs/: datafusion.md
rust/: Cargo.toml
rust/src/: lib.rs
rust/validation/queries/ingest/: binary_view.toml  binary_view.txtcase  fixed_size_binary.toml  fixed_size_binary.txtcase  large_binary.toml  large_binary.txtcase  large_string.toml  large_string.txtcase  string_view.toml  string_view.txtcase  timestamp_ns.txtcase  timestamptz_ms.txtcase  timestamptz_ns.toml  timestamptz_ns.txtcase  timestamptz_s.txtcase  timestamptz_us.txtcase
rust/validation/queries/type/literal/: binary.txtcase  float64.txtcase  time.txtcase  timestamp.txtcase  timestamptz.txtcase
rust/validation/queries/type/select/: binary.txtcase  decimal.txtcase  float64.txtcase  string.txtcase  time.txtcase  timestamp.txtcase  timestamptz.txtcase
rust/validation/tests/: datafusion.py  generate_documentation.py  test_connection.py
src/: bind.rs  catalog.rs  get_objects.rs  lib.rs  object_storage.rs
tests/: test_datafusion.rs  test_proto_partitions.rs
validation/queries/ingest/: binary.txtcase  decimal.txtcase  string_view.txtcase  timestamptz_ns.txtcase
validation/queries/type/bind/: binary.txtcase  binary_view.txtcase  fixed_size_binary.txtcase  large_binary.txtcase  large_string.txtcase  string.txtcase  string_view.txtcase  time_ns.txtcase  timestamptz_us.txtcase
validation/queries/type/literal/: binary.txtcase  float32.txtcase
validation/queries/type/select/: float32.txtcase  string.txtcase  time.txtcase  timestamptz.txtcase
validation/tests/: conftest.py  datafusion.py  generate_documentation.py  test_connection.py  test_query.py  test_statement.py
