# Copyright (c) 2025-2026 ADBC Drivers Contributors
#
# This file has been modified from its original version, which is
# under the Apache License:
#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "adbc-driver-datafusion"
description = "ADBC driver for Apache DataFusion"
license = "Apache-2.0"
version = "0.25.0"
edition = "2024"

[dependencies]
adbc_core = "0.23.0"
adbc_ffi = { version = "0.23.0", optional = true }
arrow-array = "58"
arrow-buffer = "58"
arrow-schema = "58"
arrow-select = "58"
async-trait = "0.1"
aws-config = "1.8"
aws-credential-types = "1.2"
datafusion = { version = "53", default-features = false, features = ["avro", "compression", "crypto_expressions", "datetime_expressions", "nested_expressions", "parquet", "recursive_protection", "regex_expressions", "sql", "unicode_expressions"] }
datafusion-proto = { version = "53", default-features = false }
datafusion-substrait = { version = "54", default-features = false }
driverbase = { git = "https://github.com/adbc-drivers/driverbase-rs.git" }
futures = "0.3.32"
log = "0.4"
lru = "0.18"
object_store = { version = "0.13", features = ["aws", "gcp", "http"] }
parking_lot = "0.12"
prost = "0.14.3"
regex = "1"
tokio = { version = "1.49", features = ["rt-multi-thread"] }
url = "2"

[features]
default = ["ffi"]
ffi = ["dep:adbc_ffi"]

[dev-dependencies]

[lib]
crate-type = ["lib", "cdylib"]
